--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
 		"remark-math": "^6.0.0",
 		"remark-sectionize": "^2.1.0",
 		"svelte": "^5.28.2",
-		"tailwindcss": "^3.4.17"
+		"tailwindcss": "^3.4.17",
+		"sharp":"^0.34.5"
 	},
 	"devDependencies": {
 		"@astrojs/ts-plugin": "^1.10.4",
