--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"update-diff": "node scripts/update-diff.js",
 		"watermark": "node scripts/add-watermark.js",
 		"format": "biome format --write ./src",
-		"lint": "biome check --write ./src"
+		"lint": "biome check --write ./src",
+		"postinstall": "patch-package"
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
@@ -50,7 +51,6 @@
 		"remark-directive-rehype": "^0.4.2",
 		"remark-math": "^6.0.0",
 		"remark-sectionize": "^2.1.0",
-		"sharp": "^0.34.5",
 		"svelte": "^5.28.2",
 		"tailwindcss": "^3.4.17"
 	},
@@ -71,6 +71,7 @@
 		"markdown-it": "^14.1.0",
 		"mdast-util-to-string": "^4.0.0",
 		"node-html-parser": "^7.0.1",
+		"patch-package": "^8.0.1",
 		"postcss-import": "^16.1.0",
 		"postcss-nesting": "^13.0.1",
 		"reading-time": "^1.5.0",
@@ -80,5 +81,10 @@
 		"typescript": "^5.8.3",
 		"unist-util-visit": "^5.0.0"
 	},
-	"packageManager": "pnpm@9.14.4"
+	"packageManager": "pnpm@9.14.4",
+	"pnpm": {
+		"patchedDependencies": {
+			"astro": "patches/astro.patch"
+		}
+	}
 }
